fix indentation and spacing

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                                     <option value="40">Bacon </option>
                                     <option value="50">pepper</option>
                                 </select><br><br>
-                                <input type="number" id="number" class="form-control" placeholder="Number of Pizzas"><br><br>
+                                <input type="number" id="number" class="form-control"
+                                    placeholder="Number of Pizzas"><br><br>
                                 <button type="submit" style="text-align: center;" id="btn-addtocart-ml"
                                     class="btn-success form-control">Add to Cart</button>
                             </form>
@@ -89,7 +90,8 @@
                                     <option value="40">Bacon </option>
                                     <option value="50">pepper</option>
                                 </select><br><br>
-                                <input type="number" id="number1" class="form-control" placeholder="Number of Pizzas"><br><br>
+                                <input type="number" id="number1" class="form-control"
+                                    placeholder="Number of Pizzas"><br><br>
                                 <button type="submit" style="text-align: center;" id="btn-addtocart-vegan"
                                     class="btn-success form-control">Add to Cart</button>
                             </form>
@@ -122,7 +124,8 @@
                                     <option value="40">Bacon </option>
                                     <option value="50">pepper</option>
                                 </select><br><br>
-                                <input type="number" id="number2" class="form-control" placeholder="Number of Pizzas"><br><br>
+                                <input type="number" id="number2" class="form-control"
+                                    placeholder="Number of Pizzas"><br><br>
                                 <button type="submit" style="text-align: center;" id="btn-addtocart-hawaii"
                                     class="btn-success form-control">Add To Cart</button>
                             </form>
@@ -150,7 +153,7 @@
                                     <option value="120">Gluten free</option>
                                     <option value="100">Stuffed</option>
                                 </select><br><br>
-                                <select id="toppings3" class="form-control" placeholder="Extra toppings"required>
+                                <select id="toppings3" class="form-control" placeholder="Extra toppings" required>
                                     <option value="">Choose extra toppings</option>
                                     <option value="60">Extra cheese</option>
                                     <option value="40">Bacon </option>
